--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "anti-josh_yt-bot",
+  "name": "js-stuff",
   "version": "1.0.0",
   "description": "A discord bot",
   "main": "index.js",
